syntax = "proto3";

option csharp_namespace = "WC.Service.Registration.gRPC.GrpcClients";

package employee_registration;

import "google/protobuf/empty.proto";

service EmployeeService {
//  rpc Get (google.protobuf.Empty) returns (EmployeeListResponse);
  rpc Create (EmployeeCreate) returns (CreateResult);
}

message EmployeeCreate {
  string id = 1;
  string name = 2;
  string surname = 3;
  string Patronymic = 4;
  string email = 5;
  string password = 6;
  string Position = 7;
}

message CreateResult {
  string id = 1;
}