syntax = "proto3";

option csharp_namespace = "WC.Service.Registration.gRPC.Client.Clients";

package employees;

service GreeterEmployees {
  rpc Create (EmployeeCreateRequest) returns (EmployeeCreateResponse);
}

message Employee {
  string id = 1;
  string name = 2;
  string surname = 3;
  string patronymic = 4;
  string email = 5;
  string password = 6;
  string positionId = 7;
}

message EmployeeCreateRequest {
  Employee employee = 1;
}

message EmployeeCreateResponse {
  string id = 1;
}
